Plus bel état de l'art du supervisé (assisté de savoir humain). Changement de biblio vers l'ancienne.

--- a/Manuscrit/main.org
+++ b/Manuscrit/main.org
@@ -15,6 +15,7 @@
 #+LaTeX_header:\newcommand{\newangl}[3]{\newglossaryentry{#1}{type=anglicisme,name={\emph{#2}},description={#3}}}
 #+LaTeX_header:\makeglossaries
 
+** Acronymes
 #+LaTeX_header:\newacronym{mdp}{PDM}{Processus Décisionnel de Markov}
 #+LaTeX_header:\newacronym{irl}{ARI}{Apprentissage par Renforcement Inverse}
 #+LaTeX_header:\newacronym{dp}{PD}{Programmation Dynamique}
@@ -39,6 +40,8 @@
 #+LaTeX_header:\newacronym{svm}{SVM}{\emph{Support Vector Machine} (Etonnament bien "traduit" en français par Séparateur à Vaste Marge)}
 #+LaTeX_header:\newacronym{gmm}{GMM}{\emph{Gaussian Mixture Model}}
 #+LaTeX_header:\newacronym{alvinn}{ALVINN}{\emph{Autonomous Land Vehicle In a Neural Network}}
+#+LaTeX_header:\newacronym{churps}{CHURPs}{\emph{Compressed Heuristic Universal Reaction Planners}}
+#+LaTeX_header:\newacronym{knn}{$k$-NN}{$k$ \emph{Nearest Neighboors}}
 
 #+LaTeX_header:\newangl{batch}{batch}{Par paquet}
 #+LaTeX_header:\newangl{offpolicy}{off-policy}{Hors ligne}
@@ -244,16 +247,44 @@ Le boosting permet de déplacer de manière intelligente le problème du choix d
 
 Plus brutale, l'approche de \citet{lecun2006off} utilise un \gls{cnn} à 6 couches pour apprendre une association directe entre une image (stéréo) d'entrée et un angle de braquage (la tâche à apprendre est la conduite d'un véhicule en terrain libre). Le problème de la généralisation est résolu en exigeant une base d'entraînement couvrant au maximum l'espace d'état. Les auteurs ne cachent pas la difficulté de réunir une telle base qui doit réunir des conditions de terrain et d'illumination variées tout en exigeant un comportement extrêmement cohérent et prédictible de la part de l'opérateur humain et ce sur un grand nombre de trajectoires (il faut réunir près d'une centaine de milliers d'échantillons). En contrepartie de ces efforts, la technique proposée est robuste et ne nécessite aucun travail d'ingénierie au niveau des attributs, puisque la politique apprise associe directement la sortie du capteur à la consigne de l'actuateur du robot. Bien que cela soit moins problématique aujourd'hui avec l'augmentation de puissance des équipements embarqués, elle semble également plus rapide (dans l'exploitation, non dans l'apprentissage) que l'état de l'art de l'époque. Elle améliore les résultats notamment par rapport à \gls{alvinn} \citep{pomerleau1993knowledge} en ceci que la résolution des caméras peut être augmentée sans trop grande explosion du réseau grâce à l'usage de la convolution et non d'un réseau complètement connecté, et que la tâche apprise est plus difficile, il s'agit de conduire en terrain libre et non de suivre une route.
 
-La classification par arbre de décision a été appliquée à l'apprentissage d'un plan de vol dans \citep{sammut1992learning}. L'application est impressionnante, piloter un avion, même en simulation, n'est pas une mince affaire. Les facteurs limitants sont cependant les mêmes que pour l'approche précédente : un grand nombre d'échantillons est requis (du même ordre de grandeur, de l'ordre de la centaine de milliers) et un comportement cohérent est exigé de l'expert humain (à un point tel que les démonstrations de deux experts ne peuvent être mélangées en une seule base d'entraînement). De plus, le système apprend un plan de vol fixe et relativement simple et ne saurait réagir à l'imprévu pour lequel on ne pourrait d'ailleurs l'entraîner par imitation supervisée sans généralisation puisqu'on ne pourrait épuiser la liste des situations dans lesquelles un pilote pourrait être amené à se trouver.
+Nous venons de voir deux techniques différents permettant d'apprendre une politique à partir d'un base de données inerte, de manière supervisée, avec une intervention humaine minimale : soit l'on dispose de suffisamment de données pour qu'un apprentissage par cœur de la base corresponde à un apprentissage performant sur tout l'espace d'état, soit l'on construit des attributs (ou si l'on utilise du \gls{boosting} un espace d'hypothèse où les choisir) tels que l'apprentissage au mieux (en minimisant une fonction de coût exprimée sur les données) ne soit pas un apprentissage par cœur, mais un apprentissage généralisant sur tout l'espace d'état. Apprendre une politique de manière locale, c'est à dire en se concentrant trop sur une base de données lacunaire, n'est pas satisfaisant. Cela donne un résultat fragile, l'agent sera en effet pris au dépourvu s'il a à contrôler le système dans une configuration différente de celle sur laquelle il a été entraîné : il ne dispose ni d'information relative au comportement de l'expert dans une telle situation, ni d'information sur la tâche à accomplir qui lui permettraient de déduire ce que pourrait être ce comportement.
 
-Afin de minimiser le nombre d'échantillons nécessaires à l'apprentissage supervisé de la politique experte, l'idée de demander ces échantillons de manière interactive a été proposée. Un exemple d'une telle approche est décrit en \citep{chernova2007confidence}. Des \gls{gmm} sont appris à partir d'une base de données experte de départ, puis l'agent applique la politique apprise tout en demandant à l'expert, lorsque l'incertitude est trop grande, de lui fournir un échantillon supplémentaire. Cette approche permet de limiter la redondance de la base d'entraînement et de guider l'échantillonnage vers les zones intéressantes de l'espace d'état, ce qui en plus de limiter la taille de la base d'entraînement règle aussi le problème de la généralisation : quand l'agent ne sait pas généraliser, il demande à l'expert.
+Brisant la contrainte de la base de données inerte, l'idée de demander ces échantillons de manière interactive a été proposée afin de minimiser la quantité de données nécessaire à l'apprentissage de la politique experte. Un exemple d'une telle approche est décrit en \citep{chernova2007confidence}. Des \gls{gmm} sont appris à partir d'une base de données experte de départ, puis l'agent applique la politique apprise tout en demandant à l'expert, lorsque l'incertitude est trop grande, de lui fournir un échantillon supplémentaire. Cette approche permet de limiter la redondance de la base d'entraînement et de guider l'échantillonnage vers les zones intéressantes de l'espace d'état, ce qui est également une solution au problème de la généralisation : quand l'agent ne sait pas généraliser, il demande à l'expert.
 
-Cette dernière approche fait apparaître une idée que l'on retrouve dans plusieurs contributions \citep{saunders2006teaching,bentivegna2004learning,bain2000framework} et qui consiste à compenser les faiblesses de l'apprentissage supervisé de la politique et à profiter de ses forces en l'intégrant dans un cadre plus étoffé. L'agent dans ce cadre ne se contente pas d'apprendre (en généralisant plus ou moins bien) la politique de l'expert à partir d'une base d'exemple inerte, mais il profite d'interactions avec l'expert et l'environnement pour parfaire son apprentissage ou découvrir les zones de l'espace d'état où il a besoin de plus d'information (apprendre à apprendre). Les actions peuvent également être regroupées en séquences afin de pousser l'horizon vers le moyen ou long terme plutôt que de rester dans le choix de l'action immédiate. On retrouve aussi la décomposition du problème en une hiérarchie de problèmes plus simples sur lesquels une politique locale est apprise de manière supervisée. Ces approches sont performantes et font un usage intelligent des algorithmes d'apprentissage supervisé qu'elles emploient, mais décalent dans la mise en place du cadre qu'elles définissent les problèmes intrinsèquement liés à l'usage de ces algorithmes. Il est en effet nécessaire d'adapter à chaque problème (quand cela est possible) la mise en place des techniques décrites, il n'y a pas encore de cadre général pouvant être appliqué avec un effort minimal à une grande classe de problèmes.
+L'apprentissage direct de la politique experte est parfois intégré à dans un cadre plus large, où les notions de hiérarchie et de but apparaissent.
 
-*** Imitation par d'autres formes d'apprentissage
-**** Historique : les approches de Computational approaches to motor learning by imitation
-**** Combler les manques, les approches qui n'apprennent pas une action mais autre chose A survey of robot learning from demonstration
-**** Citer les deux surveys     
+La classification par arbre de décision a été appliquée à l'apprentissage d'un plan de vol dans \citep{sammut1992learning}. L'application est impressionnante, piloter un avion, même en simulation, n'est pas une mince affaire puisqu'il fut en temps réel prendre en compte un grand nombre de facteurs pour décider d'une action parmi un éventail assez large. Les facteurs limitants de l'apprentissage automatique sont les mêmes que pour l'approche précédente : un grand nombre d'échantillons est requis (du même ordre de grandeur, de l'ordre de la centaine de milliers) et un comportement cohérent est exigé de l'expert humain (à un point tel que les démonstrations de deux experts ne peuvent être mélangées en une seule base d'entraînement). De plus, l'aspect automatique de l'approche reste limité à l'apprentissage d'une politique par phase de vol. La détection de la phase de vol courante et donc le choix de la politique de contrôle à appliquer est effectué par des règles d'origine humaine. Pour chaque phase, la politique apprise n'est robuste qu'à de petites variations dans les états rencontrés.
+
+De fait, cette approche a été le point de départ de nombreuses améliorations. Le travail présenté par \citet{stirling1995churps} (appelé \gls{churps}) consiste a déduire un contrôleur à partir d'une description du modèle d'évolution du système et du but à atteindre. Pour automatiser la création de ces descriptions, tâche réclamant un travail difficile car nécessitant de décrire des mécanismes précis à l'aide d'un langage contraignant, \citet{bain2000framework} proposent d'utiliser les données de l'expert. Les règles complexes ainsi apprises étant ajoutées à l'espace d'action, il est possible d'apprendre de manière automatique un classifieur plus concis que celui de \citet{sammut1992learning}, et nécessitant moins de données expertes. L'architecture proposée utilise la logique du premier ordre et donc le raisonnement symbolique. Cela permet d'introduire explicitement des connaissances expertes dans le système. Ces connaissances peuvent être acquises semi-automatiquement : les prédicats sont bâtis à la main et les paramètres sont appris grâce aux données de vol comme le proposent \citet{srinivasan1998inductive}. La sémantique des symboles (ici, virage, altitude, trajectoire de vol, etc.) est très liée au problème concerné. Retrouver la puissance des techniques d'apprentissage symbolique sur un autre problème nécessite d'effectuer de nouveau le difficile travail de définition des symboles et prédicats. Un autre élément gênant est la difficulté d'exprimer la tâche à accomplir en utilisant un langage symbolique. Dans une approche hybride symbolique/automatique, \citet{shiraz1997combining} proposent à l'expert soit de décrire la tâche symboliquement, soit d'en démontrer l'exécution. Les phases les plus délicates (par exemple l'atterrissage) n'ont pu être décrites et ont été démontrées. La facilité d'exploitation des règles symbolique rentre en conflit avec la difficulté qu'il y a à les définir, à l'inverse la relative facilité de génération d'une base d'exemple se heurte à la difficulté qu'il y a à généraliser à partir de celle-ci.
+
+Une autre approche utilise les notions de hiérarchie et de but, mais de manière quelque peu différente. Plutôt que d'utiliser la logique des prédicats, ce sont les principes de programmation impérative qui se voient assistés par l'apprentissage supervisé. Dans \cite{saunders2006teaching}, ce sont les \gls{knn} qui sont utilisés pour l'apprentissage supervisé d'une politique. Les attributs sont construits à la main à partir des valeurs de sortie des capteurs du robot, et portent une sémantique forte et explicite (distance, angle), donc pratique pour l'exploitation par un opérateur humain. Les problèmes de généralisation de l'apprentissage supervisé sont contournés par l'intégration dans un cadre beaucoup plus riche : l'opérateur humain peut élargir l'espace d'action à volonté, soit en définissant une séquence d'actions qui seront exécutées en série de manière déterministe, soit en proposant des exemples du comportement souhaité en précisant ou non un état-but correspondant à la situation dans laquelle on souhaite voir le robot une fois la politique exécutée. Ces exemples servent alors à l'apprentissage d'une politique de manière supervisée, cette politique est ajoutée en tant qu'action et son exécution pourra être déclenchée dans le cadre d'une autre politique, de niveau d'abstraction plus grand. Cette hiérarchisation des comportements permet de limiter l'effort humain, d'optimiser l'utilisation des exemples et de rapidement mettre en place des comportements complexes par la création de nouveaux niveau d'abstraction. 
+
+L'apprentissage supervisé est dans les approches que nous venons de citer utilisé comme sous routine d'un système beaucoup plus large, dans lequel l'expertise humaine explicite reste le moyen central permettant la généralisation des comportements.
+
+
+# Méthode de regroupement des actions : on apprend plus une politique en la copiant mais on essaie de comprendre comment fonctionne l'expert.
+# ?? Moultes autres approches, labyrinthiques, exemples ultra rapide, se référer à blip et blop pour un survey
+# ^(saunders2006teaching) citation [22] semble en proposer un survey. (saunders2006teaching) en propose lui-même un bon
+# L'idée est bonne, mais (problèmes liés à l'approche). Ce qu'il faudrait c'est comprendre le but de l'expert, et essayer d'isoler ça.
+# FIXME: La notion de but apparâit plusieurs fois
+# Trucs que je sais pas où foutre :
+# saunders2006learning, sec 3 : si on observe l'expert, on a pas accès à ses sensations ni à ses ordres directement, et ils correspondent pas à ceux de l'expert. Quoiqu'en changeant l'espace d'action (tour, fou etc.) , on devrait y arriver.  #correspondance problem
+# 
+# Trucs que j'ai pas lu, mais qu'il faudrait peut-être lire et mettre dans ce chapitre ou ailleurs, mais dont j'espère qu'ils sont de moindre importance et que donc c'est pas grave si je n'en parle pas
+# (argall2009survey) T. Inamura, M. Inaba, H. Inoue, Acquisition of probabilistic behavior decision model based on the interactive teaching method, in: Proceedings of the Ninth International Conference on Advanced Robotics, ICAR’99, 1999.
+# En fait toute la section 4.1 de argall2009survey mériterait d'être explorée ici, mais c'est long et chiant et il se fait tard.
+# Faudrait aussi se faner schaal et son gros survey, mais c'est vraiment mal écrit, et je pense pas que je jeu en vaille la chandelle. Il faudrait penser à le citer, cependant.
+# FIXME: normalement ce paragraphe est complètement explosé en plusieurs autres
+# Ya bentivegna2004learning qui sert à rien mais qu'on peut rajouter si ya besoin de parler pour ne rien dire (problème dépendant)
+# ya coates2008learning qui est impressionnant mais qui rentre dans aucune case
+# ya  konidaris2011cst que je sais pas où foutre
+# ya  leon2011teaching que je sais pas ou ranger non plus
+# Quelque part il faudrait rajouter  montana2011towards
+# Et natarajan2011imitation, c'est du supervisé, ou pas ?
+# J'ai l'impression de m'embarquer dans un labyrinthe sans fin, avec toujours plus de papiers à résumer. Il est impossible d'être exhaustif en si peu de temps.
+# FIXME Citer les deux surveys 
+
+# Paragrapge de transition : Les sytèmes qui facilitent la vie aux humains en utilisant le supervisé en sous routine ont en filigrane la notion de but. S'il était possible de formaliser cette notion afin d'en faire profiter l'apprentissage automatique, on serait les rois du pétrole
 ** Cadre des \glspl{mdp} pour la prise de décision séquentielle
 # Snippet: La classification ne se soucie pas de l'objectif de l'expert. Quid si une action mal choisie fait dérailler l'agent sur une partie totalement inconnue de l'espace d'état ?
 *** TODO justifier le cadre, dire pourquoi on introduit ces notions
@@ -294,6 +325,7 @@ Cette dernière approche fait apparaître une idée que l'on retrouve dans plusi
 
      
    \cite{ratliff2006maximum} propose \gls{mmp}, une approche dont on peut tordre la formulation pour la comparer à \gls{pirl} \cite{neu2009training}, mais qui associe non pas des états à des actions mais des politiques à des MDP. Cela pose encore d'autres problèmes comme la nécessité de résoudre de multiples \glspl{mdp} de manière tractable, et de formuler le problème du contrôle non pas comme un MDP, mais comme de multiples \glspl{mdp} "compatibles" entre eux. Cet algorithme peut apprendre des attributs par \gls{boosting} \cite{ratliff2007boosting}.
+# Utiliser l'articulation sans oute présente (sais pas exactement, pas encore lu) dans ratliff2009learning pour tous les papiers de ratliff
 
    La technique proposée dans \cite{neu2007apprenticeship} (\gls{pm}) est plus robuste que celles décrites jusqu'à présent aux changements d'échelles des attributs ou au bruit dans les attributs. Elle souffre des même types de contraintes que \gls{pirl} ; comme \gls{pirl}, elle raisonne sur des politiques et non sur des récompenses.
 
@@ -375,6 +407,6 @@ Cette dernière approche fait apparaître une idée que l'on retrouve dans plusi
 * Perspectives de recherche 
 * Bibliographie 
 \bibliographystyle{plainnat}
-\bibliography{Biblio}
+\bibliography{../../Biblio/Biblio}
 * Glossaire 
 \printglossaries
